--- a/ew/static/ew/css/add.css
+++ b/ew/static/ew/css/add.css
@@ -120,6 +120,7 @@
     margin-top: 50px;
     text-align: center;
     line-height:50px;
+    color: black;
     font-size: 20px;
     background-color: rgb(213, 255, 189);
     border: 1px solid rgb(112, 112, 112);
