--- a/ew/static/ew/css/style.css
+++ b/ew/static/ew/css/style.css
@@ -1,5 +1,6 @@
 html {
   font-size: 18px;
+  font-family: sans-seif;
   background-color: white;
 }
 
@@ -26,24 +27,6 @@ ul {
 
 main {
   margin: 0 10px;
-}
-
-@media screen and (min-width: 517px)
-{
-  ul, main {
-    margin: 0 calc(50% - 258px);
-  }
-}
-
-@media screen and (min-width: 757px)
-{
-  ul, main {
-    margin: 0 120px;
-    justify-content: space-between;
-  }
-  #scli {
-    width: calc(100vw - 450px );
-  }
 }
 
 li {
@@ -115,11 +98,64 @@ li {
   white-space: nowrap;
 }
 
-#tools {
+#toolbox {
   width: 100%;
   height: 50px;
-  display: flex;
-  justify-content:space-around;
   background-color: rgb(223, 255, 199);
   border-bottom: solid 1px rgb(223, 230, 199);
+}
+
+#tools {
+  margin: 0 0;
+  display: flex;
+  justify-content:center;
+}
+
+.tool {
+  display: block;
+  width: 130px;
+  height: 50px;
+  margin: 0px 0px;
+  text-align: center;
+  line-height: 50px;
+  font-size: 20px;
+  background-color: rgb(223, 255, 199);
+  border-radius: 0px;
+  color: black;
+  text-decoration: none;
+  transition: all  0.1s ease;
+}
+
+.tool:hover {
+  background-color: rgb(255, 255, 255);
+  border-radius: 7px;
+}
+
+
+
+
+@media screen and (min-width: 517px)
+{
+  ul, main, #tools {
+    margin: 0 calc(50% - 258px);
+  }
+}
+
+@media screen and (min-width: 757px)
+{
+  ul, main {
+    margin: 0 120px;
+    justify-content: space-between;
+  }
+
+  #scli {
+    width: calc(100vw - 450px);
+  }
+}
+
+@media screen and (min-width: 1117px) 
+{
+  #tools {
+    margin: 0 300px;
+  } 
 }
