--- a/counter/templates/counter/index.html
+++ b/counter/templates/counter/index.html
@@ -3,14 +3,28 @@
 <html>
    <head>
         <meta charset="utf-8">
-        <link rel="icon" href="{% static 'pf/images/favicon.ico' %}">
+        <link rel="stylesheet" href="{% static 'counter/css/style.css' %}">
+        <link rel="icon" href="{% static 'counter/images/favicon.ico' %}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="robots" content="noindex"/>
         <title>カウンター</title>
  </head>
 
- <body>hello</body>
+ <body>
+   <header>
+      <ul>
+        <li><li><a href="{% url 'home:index' %}"><img src="{% static 'home/cosmos.png' %}" width="50px"></a></li></li>
+      </ul>
+   </header>
+
+
+
+
+
+
+
+
+
+ </body>
 </html>
-
-
 
