--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -41,6 +41,9 @@
             #ew {
                 width: 250px;
             }
+            #counter {
+                width: 170px;
+            }
 
         </style>
     </head>
@@ -49,6 +52,7 @@
         <a href="{% url 'note:index' %}"><img  id="note" class="icon" src="{% static 'note/images/note.jpg' %}" alt="メモ"></a>
         <a href="{% url 'pf:index' %}"><img  id="pf" class="icon" src="{% static 'home/pf.png' %}" alt="素因数分解"></a>
         <a href="{% url 'ew:index' %}"><img  id="ew" class="icon" src="{% static 'ew/images/ew.png' %}" alt="英単語"></a>
+        <a href="{% url 'counter:index' %}"><img  id="counter" class="icon" src="{% static 'home/counter.png' %}" alt="カウンター"></a>
         </div>
     </body>
 </html>
