--- a/note/templates/note/base.html
+++ b/note/templates/note/base.html
@@ -16,6 +16,7 @@
       <header>
          <ul>
              <li><a href="{% url 'note:index' %}"><img src="{% static 'note/images/note.jpg' %}" width="50px"></a></li>
+             <li><a href="{% url 'home:index' %}" ><img src="{% static 'home/cosmos.png' %}" width="50px" id="homeicon"></a></li>
          </ul>
      </header>
     
