--- a/note/static/note/css/style.css
+++ b/note/static/note/css/style.css
@@ -13,6 +13,7 @@ header {
 
 header ul {
     display: flex;
+    justify-content: space-between;
     height: 90px;
     margin: 0px 20px;
     padding: 0;
@@ -29,7 +30,9 @@ header li a {
     text-decoration:none;
   }
 
-
+#homeicon {
+  margin-top: 10px;
+}
 
 main {
   margin: 20px 20px;
